FIX : .gradient-bg, .page-top-banner .overlay-bg, .banner-section .overlay-bg, .features-wrap .single-feature .overlay-bg

--- a/scss/customize.scss
+++ b/scss/customize.scss
@@ -15,6 +15,8 @@
     background-size: cover;
     min-height: 950px;
 }
-.single-feature .overlay-bg {
+
+<style>
+ .gradient-bg, .page-top-banner .overlay-bg, .banner-section .overlay-bg, .features-wrap .single-feature .overlay-bg {
     background: -webkit-linear-gradient(0deg, rgb(2, 156, 217) 0%, rgb(73, 79, 160) 100%);
 }
